--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,16 @@ webpack-stats.json
 public/
 dist/
 
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+/media
+/static
+
 # Editor directories and files
 .idea
 .vscode
