--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "leaflet": "^1.3.4",
+    "leaflet-ajax": "^2.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "webpack-bundle-tracker": "^0.3.0"
